# splc

./: .gitignore  CMakeLists.txt  Makefile  README.md  ast.c  ast.cpp  ast.h  ast.hpp  ast_dump.hpp  ast_exp.cpp  ast_exp.hpp  ast_visitor.hpp  ast_walker.hpp  cst.c  cst.cpp  cst.h  cst.hpp  gen_tac.cpp  gen_tac.hpp  lex.l  main.c  main.cpp  parser.c  parser.h  parser.hpp  semantic.cpp  semantic.hpp  semantic_err.hpp  symbol_table.c  symbol_table.h  symbol_table.hpp  syntax.y  syntax_err.hpp  syntax_errs.c  syntax_errs.h  syntax_errs.hpp  tac.hpp  translate.cpp  translate.hpp  type.c  (+4 more)
.github/workflows/: ccpp.yml  ci.yml
test/: comments.spl  diff_test.py  positive_negative.out  positive_negative.spl  test_1_comments.ac  test_1_for.ac  test_1_for.spl  test_1_o02.out  test_1_o03.out  test_1_r10.ac  test_1_scientific_float.ac  test_1_scientific_float.spl
tests/: CMakeLists.txt  Makefile  test_ast.cpp  test_type.cpp  test_utils.cpp  test_visitor.cpp  test_walker.cpp
utils/: array.h  dict.c  dict.h  new.h
